[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/aigle.jpeg" type="Texture" id=1]
[ext_resource path="res://Scripts/Scenes/Menu/Menu.gd" type="Script" id=3]
[ext_resource path="res://Assets/arial.ttf" type="DynamicFontData" id=6]

[sub_resource type="DynamicFont" id=1]
size = 48
font_data = ExtResource( 6 )

[node name="Menu" type="Node2D"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 800.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 5

[node name="LabelFinale" type="Label" parent="TextureRect"]
anchor_right = 1.0
margin_left = 28.0
margin_top = 132.0
margin_right = -20.0
margin_bottom = 261.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_y = 5
text = "Finale 2024"
align = 1

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -420.0
margin_top = 45.0
margin_right = -20.0
margin_bottom = -585.0
custom_constants/separation = 20
alignment = 2

[node name="ButtonEditeurCarte" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 70.0
margin_right = 400.0
margin_bottom = 90.0
size_flags_vertical = 0
text = "Éditeur"

[node name="ButtonVisualiseurCarte" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 110.0
margin_right = 400.0
margin_bottom = 130.0
size_flags_vertical = 0
text = "Visualiseur"

[node name="ButtonReplay" type="Button" parent="TextureRect/VBoxContainer"]
margin_top = 150.0
margin_right = 400.0
margin_bottom = 170.0
size_flags_vertical = 0
text = "Replay"

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
margin_right = 315.0
margin_bottom = 96.0

[node name="EditorPopup" type="WindowDialog" parent="."]
margin_left = 184.208
margin_top = -329.705
margin_right = 467.208
margin_bottom = -146.705
rect_scale = Vector2( 1.663, 1.663 )
popup_exclusive = true
window_title = "Créer une carte"

[node name="VBoxContainer" type="VBoxContainer" parent="EditorPopup"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="EditorPopup/VBoxContainer"]
margin_right = 263.0
margin_bottom = 138.0
size_flags_vertical = 3
custom_constants/separation = 20
alignment = 1

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="EditorPopup/VBoxContainer/HBoxContainer"]
margin_right = 97.0
margin_bottom = 138.0
size_flags_horizontal = 3

[node name="Largeur" type="LineEdit" parent="EditorPopup/VBoxContainer/HBoxContainer/AspectRatioContainer"]
margin_top = 20.5
margin_right = 97.0
margin_bottom = 117.5
rect_pivot_offset = Vector2( 22.9559, 18.6385 )
align = 1
placeholder_text = "L"
placeholder_alpha = 0.3
caret_blink = true

[node name="Label" type="Label" parent="EditorPopup/VBoxContainer/HBoxContainer"]
margin_left = 117.0
margin_top = 41.0
margin_right = 145.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 1 )
text = "×"

[node name="AspectRatioContainer2" type="AspectRatioContainer" parent="EditorPopup/VBoxContainer/HBoxContainer"]
margin_left = 165.0
margin_right = 263.0
margin_bottom = 138.0
size_flags_horizontal = 3

[node name="Hauteur" type="LineEdit" parent="EditorPopup/VBoxContainer/HBoxContainer/AspectRatioContainer2"]
margin_top = 20.0
margin_right = 98.0
margin_bottom = 118.0
rect_pivot_offset = Vector2( 22.9559, 18.6385 )
align = 1
placeholder_text = "H"
placeholder_alpha = 0.3
caret_blink = true

[node name="Error" type="Label" parent="EditorPopup/VBoxContainer"]
visible = false
margin_top = 59.0
margin_right = 223.0
margin_bottom = 107.0
custom_colors/font_color = Color( 0.945098, 0.145098, 0.0352941, 1 )
text = "Erreurs possibles :
- Le format n'est pas bon
- La taille n'est pas entre 10 et 200"
align = 1

[node name="Creer" type="Button" parent="EditorPopup/VBoxContainer"]
margin_top = 142.0
margin_right = 263.0
margin_bottom = 162.0
text = "Créer"

[node name="ReplayPopup" type="FileDialog" parent="."]
margin_right = 670.0
margin_bottom = 402.0
window_title = "Ouvrir un fichier"
mode = 0
filters = PoolStringArray( "*.json" )

[connection signal="pressed" from="TextureRect/VBoxContainer/ButtonEditeurCarte" to="." method="_on_ButtonEditeurCarte_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ButtonVisualiseurCarte" to="." method="_on_ButtonVisualiseurCarte_pressed"]
[connection signal="pressed" from="TextureRect/VBoxContainer/ButtonReplay" to="." method="_on_ButtonReplay_pressed"]
[connection signal="pressed" from="EditorPopup/VBoxContainer/Creer" to="." method="_on_Creer_pressed"]
[connection signal="file_selected" from="ReplayPopup" to="." method="_on_ReplayPopup_file_selected"]
